Revision history for Dist-Zilla-Plugin-BuildSelf

{{$NEXT}}

0.001     2011-05-02 09:19:27 Europe/Bucharest
         Initial release